gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test15925.d
version https://git-lfs.github.com/spec/v1
oid sha256:94a6f2a3db7fc418a1394b86306bf5dc5504ca3f7c69d2035b86f7394f8ac930
size 329
